--- a/contact.html
+++ b/contact.html
@@ -32,233 +32,243 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-wrapper">
-      <figure class="logo">
-        <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
-      </figure>
-      <nav aria-label="icons" class="icons">
-        <div class="dropdown-wrapper">
-          <i class="fa fa-search icon"></i>
-          <div class="search-dropdown">
-            <p class="search-header">search results</p>
-            <form action="" class="dropdown-form">
-              <label for="search" class="label">Search</label>
-              <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
-            </form>
-            <p class="dropdown-text">
-              Sorry, no result for your search, please try something else
-            </p>
+  <div class="flex-wrapper">
+    <header>
+      <div class="header-wrapper">
+        <figure class="logo">
+          <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
+        </figure>
+        <nav aria-label="icons" class="icons">
+          <div class="dropdown-wrapper">
+            <i class="fa fa-search icon"></i>
+            <div class="search-dropdown">
+              <p class="search-header">search results</p>
+              <form action="" class="dropdown-form">
+                <label for="search" class="label">Search</label>
+                <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
+              </form>
+              <p class="dropdown-text">
+                Sorry, no result for your search, please try something else
+              </p>
+            </div>
           </div>
-        </div>
 
-        <div class="dropdown-wrapper">
-          <i class="fa fa-ticket-alt icon"></i>
-          <div class="ticket-dropdown">
-            <p class="ticket-header">buy ticket</p>
-            <p class="dropdown-text">
-              Please Choose the Desired Number of Tickets and Click Proceed in
-              order to finalize your purchase on www.ticketmaster.com
-            </p>
-            <p class="dropdown-text">
-              If your party consist of 6 people or more, you will be taken to
-              our contact form.
-            </p>
-            <form action="" class="ticket dropdown-form">
-              <label for="select" class="ticket-label">Tickets</label>
-              <select name="tickets" id="select">
-                <option class="option" value="1">1</option>
-                <option class="option" value="1">2</option>
-                <option class="option" value="1">3</option>
-                <option class="option" value="1">4</option>
-                <option class="option" value="1">5</option>
-                <option class="option" value="more">6 or more</option>
-              </select>
-            </form>
-            <button class="ticket">PROCEED</button>
+          <div class="dropdown-wrapper">
+            <i class="fa fa-ticket-alt icon"></i>
+            <div class="ticket-dropdown">
+              <p class="ticket-header">buy ticket</p>
+              <p class="dropdown-text">
+                Please Choose the Desired Number of Tickets and Click Proceed in
+                order to finalize your purchase on www.ticketmaster.com
+              </p>
+              <p class="dropdown-text">
+                If your party consist of 6 people or more, you will be taken to
+                our contact form.
+              </p>
+              <form action="" class="ticket dropdown-form">
+                <label for="select" class="ticket-label">Tickets</label>
+                <select name="tickets" id="select">
+                  <option class="option" value="1">1</option>
+                  <option class="option" value="1">2</option>
+                  <option class="option" value="1">3</option>
+                  <option class="option" value="1">4</option>
+                  <option class="option" value="1">5</option>
+                  <option class="option" value="more">6 or more</option>
+                </select>
+              </form>
+              <button class="ticket">PROCEED</button>
+            </div>
           </div>
-        </div>
 
-        <div class="dropdown-wrapper">
-          <i class="fa fa-user-circle icon"></i>
-          <div class="profile-dropdown">
-            <p class="profile-header">your account</p>
-            <form class="dropdown-form" id="profile-form">
-              <label for="email" class="label">E-mail</label>
-              <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
-              <div class="error-message" id="profile-email-error">
-                Please enter a valid e-mail address
-              </div>
+          <div class="dropdown-wrapper">
+            <i class="fa fa-user-circle icon"></i>
+            <div class="profile-dropdown">
+              <p class="profile-header">your account</p>
+              <form class="dropdown-form" id="profile-form">
+                <label for="email" class="label">E-mail</label>
+                <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
+                <div class="error-message" id="profile-email-error">
+                  Please enter a valid e-mail address
+                </div>
 
-              <label for="choose" class="label_2">Password</label>
-              <input type="password" name="choose" placeholder="Password" class="box password" id="dropdown-password" />
-              <div class="error-message" id="profile-password-error">
-                Must be at least 5 characters
-              </div>
-              <div id="success-message">
-                Welcome back, you are now logged in
-              </div>
-              <button type="submit" id="profile-submit-button" class="profile">
-                SIGN IN
-              </button>
-            </form>
+                <label for="choose" class="label_2">Password</label>
+                <input type="password" name="choose" placeholder="Password" class="box password"
+                  id="dropdown-password" />
+                <div class="error-message" id="profile-password-error">
+                  Must be at least 5 characters
+                </div>
+                <div id="success-message">
+                  Welcome back, you are now logged in
+                </div>
+                <button type="submit" id="profile-submit-button" class="profile">
+                  SIGN IN
+                </button>
+              </form>
+            </div>
           </div>
-        </div>
+        </nav>
+      </div>
+      <nav aria-label="menu" class="menu">
+        <ul class="mobile-menu">
+          <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
+            <span id="menu" class="menu-link">Menu</span>
+          </label>
+          <input type="checkbox" id="hamburger-menu" />
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="explore.html">Explore</a></li>
+          <li><a href="get_involved.html">Get involved</a></li>
+          <li><a href="visit.html">Visit</a></li>
+          <li><a href="about_us.html">About us</a></li>
+        </ul>
+        <ul class="large-screen-menu">
+          <li>
+            <a href="exhibitions.html" class="menu-link">Exhibitions</a>
+          </li>
+          <li>
+            <a href="explore.html" class="menu-link">Explore</a>
+          </li>
+          <li>
+            <a href="get_involved.html" class="menu-link">Get involved</a>
+          </li>
+          <li>
+            <a href="visit.html" class="menu-link">Visit</a>
+          </li>
+          <li>
+            <a href="about_us.html" class="menu-link">About us</a>
+          </li>
+        </ul>
       </nav>
-    </div>
-    <nav aria-label="menu" class="menu">
-      <ul class="mobile-menu">
-        <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
-        </label>
-        <input type="checkbox" id="hamburger-menu" />
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="explore.html">Explore</a></li>
-        <li><a href="get_involved.html">Get involved</a></li>
-        <li id="visit"><a href="visit.html">Visit</a></li>
-      </ul>
-      <ul class="large-screen-menu">
-        <li>
-          <a href="exhibitions.html" class="menu-link">Exhibitions</a>
-        </li>
-        <li>
-          <a href="explore.html" class="menu-link">Explore</a>
-        </li>
-        <li>
-          <a href="get_involved.html" class="menu-link">Get involved</a>
-        </li>
-        <li>
-          <a href="visit.html" class="menu-link">Visit</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+    </header>
 
-  <main>
-    <div class="main-wrapper">
-      <div class="content-container">
-        <h1 class="main-heading">Contact & FAQ</h1>
-        <section class="contact-section">
-          <form class="form info-box">
-            <h2>If you need to get in touch with us, please use this form:</h2>
-            <ul class="form-info">
-              <li>
-                Submit your inquiry, and we will get back to you as soon as
-                possible.
-              </li>
-              <li>Please also see our FAQ before submitting a question.</li>
-            </ul>
-            <div class="form-block">
-              <label for="name" class="label">Name</label>
-              <input type="text" id="name" placeholder="Name" />
-              <div id="name-error" class="error-message">
-                Must be at least 5 characters
+    <main>
+      <div class="main-wrapper">
+        <div class="content-container">
+          <h1 class="main-heading">Contact & FAQ</h1>
+          <section class="contact-section">
+            <form class="form info-box">
+              <h2>If you need to get in touch with us, please use this form:</h2>
+              <ul class="form-info">
+                <li>
+                  Submit your inquiry, and we will get back to you as soon as
+                  possible.
+                </li>
+                <li>Please also see our FAQ before submitting a question.</li>
+              </ul>
+              <div class="form-block">
+                <label for="name" class="label">Name</label>
+                <input type="text" id="name" placeholder="Name" />
+                <div id="name-error" class="error-message">
+                  Must be at least 5 characters
+                </div>
               </div>
-            </div>
-            <div class="form-block">
-              <label for="email_2" class="label">E-mail</label>
-              <input type="text" name="email" placeholder="your@email.com" id="email_2" />
-              <div id="email_2-error" class="error-message">
-                Please enter a valid e-mail address
+              <div class="form-block">
+                <label for="email_2" class="label">E-mail</label>
+                <input type="text" name="email" placeholder="your@email.com" id="email_2" />
+                <div id="email_2-error" class="error-message">
+                  Please enter a valid e-mail address
+                </div>
               </div>
-            </div>
-            <div class="form-block">
-              <label for="option" class="label">Subject</label>
-              <select name="tickets" id="option">
-                <option value="1">I would like to book a group tour</option>
-                <option value="1">I have a question</option>
-                <option value="1">Join a children's club</option>
-                <option value="1">I want to donate</option>
-                <option value="1">
-                  I'm a teacher who want to bring my students
-                </option>
-                <option value="1">
-                  I'm a researcher and want to get in touch
-                </option>
-                <option value="1">I would like to join as a volunteer</option>
-                <option value="1">
-                  I would like to join on a internship
-                </option>
-                <option value="more">Other</option>
-              </select>
-            </div>
-            <div id="message-form" class="form-block">
-              <label for="text">Message</label>
-              <textarea id="message" placeholder="Write your message here..."></textarea>
-              <div id="message-error" class="error-message">
-                Must be at least 15 characters
+              <div class="form-block">
+                <label for="option" class="label">Subject</label>
+                <select name="tickets" id="option">
+                  <option value="1">I would like to book a group tour</option>
+                  <option value="1">I have a question</option>
+                  <option value="1">Join a children's club</option>
+                  <option value="1">I want to donate</option>
+                  <option value="1">
+                    I'm a teacher who want to bring my students
+                  </option>
+                  <option value="1">
+                    I'm a researcher and want to get in touch
+                  </option>
+                  <option value="1">I would like to join as a volunteer</option>
+                  <option value="1">
+                    I would like to join on a internship
+                  </option>
+                  <option value="more">Other</option>
+                </select>
               </div>
-            </div>
-            <div id="success">Your message has been submitted</div>
-            <button class="button" id="submit-button" type="submit">Submit</button>
-          </form>
-        </section>
-        <section class="faq-section">
-          <h2>Frequently Asked Questions</h2>
-          <ol class="faq">
-            <li>
-              Question about opening hours:
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </li>
-            <li>
-              Question about food:
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </li>
-            <li>
-              Question about tickets:
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </li>
-            <li>
-              Question about donations:
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </li>
-            <li>
-              Question about the clubs:
-              <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-              </p>
-            </li>
-          </ol>
-        </section>
-
-      </div>
-      <div class="newsletter-wrapper">
-        <div class="blur">
-          <section class="newsletter">
-            <label for="newsletter">
-              Sign up to our <em>newsletter</em> and be the first to know about our
-              exciting <em>new stuff</em>:
-            </label>
-            <div class="newsletter-success">
-              Welcome! Please check your inbox
-            </div>
-            <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
-              <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
+              <div id="message-form" class="form-block">
+                <label for="text">Message</label>
+                <textarea id="message" placeholder="Write your message here..."></textarea>
+                <div id="message-error" class="error-message">
+                  Must be at least 15 characters
+                </div>
+              </div>
+              <div id="success">Your message has been submitted</div>
+              <button class="button" id="submit-button" type="submit">Submit</button>
             </form>
-            <p id="newsletter-error" class="error-message">
-              Please enter a valid e-mail address
-            </p>
           </section>
+          <section class="faq-section">
+            <h2>Frequently Asked Questions</h2>
+            <ol class="faq">
+              <li>
+                Question about opening hours:
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li>
+                Question about food:
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li>
+                Question about tickets:
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li>
+                Question about donations:
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+              <li>
+                Question about the clubs:
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+              </li>
+            </ol>
+          </section>
+
+        </div>
+        <div class="newsletter-wrapper">
+          <div class="blur">
+            <section class="newsletter-section">
+              <p for="newsletter">
+                Sign up to our <em>newsletter</em> and be the first to know about our
+                exciting <em>new stuff</em>:
+              </p>
+              <div class="newsletter-success">
+                Welcome! Please check your inbox
+              </div>
+              <form class="newsletter-form">
+                <label for="newsletter-input">E-mail</label>
+                <div class="input-wrapper">
+                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
+                </div>
+              </form>
+              <p id="newsletter-error" class="error-message">
+                Please enter a valid e-mail address
+              </p>
+            </section>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="fading-background_1"></div>
-    <div class="fading-background_2"></div>
-  </main>
-
+      <div class="fading-background_1"></div>
+      <div class="fading-background_2"></div>
+    </main>
+  </div>
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
