--- a/explore.html
+++ b/explore.html
@@ -35,222 +35,232 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-wrapper">
-      <figure class="logo">
-        <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
-      </figure>
-      <nav aria-label="icons" class="icons">
-        <div class="dropdown-wrapper">
-          <i class="fa fa-search icon"></i>
-          <div class="search-dropdown">
-            <p class="search-header">search results</p>
-            <form action="" class="dropdown-form">
-              <label for="search" class="label">Search</label>
-              <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
-            </form>
-            <p class="dropdown-text">
-              Sorry, no result for your search, please try something else
-            </p>
-          </div>
-        </div>
-
-        <div class="dropdown-wrapper">
-          <i class="fa fa-ticket-alt icon"></i>
-          <div class="ticket-dropdown">
-            <p class="ticket-header">buy ticket</p>
-            <p class="dropdown-text">
-              Please Choose the Desired Number of Tickets and Click Proceed in
-              order to finalize your purchase on www.ticketmaster.com
-            </p>
-            <p class="dropdown-text">
-              If your party consist of 6 people or more, you will be taken to
-              our contact form.
-            </p>
-            <form action="" class="ticket dropdown-form">
-              <label for="select" class="ticket-label">Tickets</label>
-              <select name="tickets" id="select">
-                <option class="option" value="1">1</option>
-                <option class="option" value="1">2</option>
-                <option class="option" value="1">3</option>
-                <option class="option" value="1">4</option>
-                <option class="option" value="1">5</option>
-                <option class="option" value="more">6 or more</option>
-              </select>
-            </form>
-            <button class="ticket">PROCEED</button>
-          </div>
-        </div>
-
-        <div class="dropdown-wrapper">
-          <i class="fa fa-user-circle icon"></i>
-          <div class="profile-dropdown">
-            <p class="profile-header">your account</p>
-            <form class="dropdown-form" id="profile-form">
-              <label for="email" class="label">E-mail</label>
-              <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
-              <div class="error-message" id="profile-email-error">
-                Please enter a valid e-mail address
-              </div>
-
-              <label for="choose" class="label_2">Password</label>
-              <input type="password" name="choose" placeholder="Password" class="box password" id="dropdown-password" />
-              <div class="error-message" id="profile-password-error">
-                Must be at least 5 characters
-              </div>
-              <div id="success-message">
-                Welcome back, you are now logged in
-              </div>
-              <button type="submit" id="profile-submit-button" class="profile">
-                SIGN IN
-              </button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <nav aria-label="menu" class="menu">
-      <ul class="mobile-menu">
-        <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
-        </label>
-        <input type="checkbox" id="hamburger-menu" />
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="explore.html">Explore</a></li>
-        <li><a href="get_involved.html">Get involved</a></li>
-        <li id="visit"><a href="visit.html">Visit</a></li>
-      </ul>
-      <ul class="large-screen-menu">
-        <li>
-          <a href="exhibitions.html" class="menu-link">Exhibitions</a>
-        </li>
-        <li>
-          <a href="explore.html" class="menu-link">Explore</a>
-        </li>
-        <li>
-          <a href="get_involved.html" class="menu-link">Get involved</a>
-        </li>
-        <li>
-          <a href="visit.html" class="menu-link">Visit</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <div class="main-wrapper">
-      <div class="content-container">
-        <h1 class="main-heading">More to explore</h1>
-        <section class="section-container">
-          <div class="blue info-box" id="item-1">
-            <h2 class="info-box-heading">For Kids</h2>
-            <p>
-              Are you a young person looking to learn more about science? Come
-              on down to our museum, there’s plenty to see and do.
-            </p>
-            <p>
-              You can learn about Newtonian physics from our bumper swing, or
-              why not travel back in time and meet our resident Woolly Mammoth?
-            </p>
-            <p>
-              Our exhibits are designed to be accessible for interested minds,
-              so make sure you come ready to learn and explore.
-            </p>
-            <p>You can also join one of our popular science clubs.</p>
-          </div>
-          <div class="info-box" id="item-2">
-            <div id="club-anchor"></div>
-            <h4 class="info-box-heading">Join a Children's Club</h4>
-            <h5>Young Stars Club</h5>
-            <p>
-              We also have the <em>Young Stars Club</em> which meets once a week
-              on a Saturday between 10:00 and 13:00 where you’ll get to explore
-              and experiment with our team of experts.
-            </p>
-            <h5>The Holiday Club</h5>
-            <p>
-              During the school holidays we run <em>The Holiday Club</em> where
-              you can join other children your age to go on a journey of
-              discovery. Each holiday we pick a new theme to explore.
-            </p>
-            <p>
-              To find out more about The Young Stars Club or The Holiday Club
-              and how you can join, send us a message.
-            </p>
-          </div>
-          <div class="image-box" id="item-3">
-            <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
-          </div>
-        </section>
-        <div class="get-in-touch" id="get-in-touch-1">
-          <p>Do you want to join one of our clubs?</p>
-          <a href="contact.html" class="button">Get in touch
-          </a>
-        </div>
-        <section class="section-container">
-          <div class="info-box" id="item-4">
-            <h3 class="info-box-heading">For Teachers</h3>
-            <p>
-              As a community-driven museum, we want to work with schools to
-              create places of learning and exploring. .
-            </p>
-            <p>
-              Our team are on hand to give your students guided tours of the
-              museum, teach them in our learning laboratory, and provide great
-              video presentations that will excite and inspire them
-            </p>
-            <p>
-              Please get in touch with us here to find out more about our
-              facilities and to arrange a time to bring your students through
-              for a visit.
-            </p>
-          </div>
-          <div class="info-box" id="item-5">
-            <h3 class="info-box-heading">For Researchers</h3>
-            <p>
-              Are you looking to get involved with our team of researchers and
-              academics?
-            </p>
-            <p>
-              Our museum offers various ways for you to use our resources and
-              contribute towards them. We have online records, laboratory space,
-              and a working relationship with a number of universities around
-              the country.
-            </p>
-          </div>
-          <div class="image-box" id="item-6">
-            <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
-          </div>
-        </section>
-        <div class="get-in-touch" id="get-in-touch-2">
-          <p>Are you a teacher or a researcher?</p>
-          <a href="contact.html" class="button">Get in touch</a>
-        </div>
-      </div>
-      <div class="newsletter-wrapper">
-        <div class="blur">
-          <section class="newsletter">
-            <label for="newsletter">
-              Sign up to our <em>newsletter</em> and be the first to know about our
-              exciting <em>new stuff</em>:
-            </label>
-            <div class="newsletter-success">
-              Welcome! Please check your inbox
+  <div class="flex-wrapper">
+    <header>
+      <div class="header-wrapper">
+        <figure class="logo">
+          <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
+        </figure>
+        <nav aria-label="icons" class="icons">
+          <div class="dropdown-wrapper">
+            <i class="fa fa-search icon"></i>
+            <div class="search-dropdown">
+              <p class="search-header">search results</p>
+              <form action="" class="dropdown-form">
+                <label for="search" class="label">Search</label>
+                <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
+              </form>
+              <p class="dropdown-text">
+                Sorry, no result for your search, please try something else
+              </p>
             </div>
-            <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
-              <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
-            </form>
-            <p id="newsletter-error" class="error-message">
-              Please enter a valid e-mail address
-            </p>
+          </div>
+
+          <div class="dropdown-wrapper">
+            <i class="fa fa-ticket-alt icon"></i>
+            <div class="ticket-dropdown">
+              <p class="ticket-header">buy ticket</p>
+              <p class="dropdown-text">
+                Please Choose the Desired Number of Tickets and Click Proceed in
+                order to finalize your purchase on www.ticketmaster.com
+              </p>
+              <p class="dropdown-text">
+                If your party consist of 6 people or more, you will be taken to
+                our contact form.
+              </p>
+              <form action="" class="ticket dropdown-form">
+                <label for="select" class="ticket-label">Tickets</label>
+                <select name="tickets" id="select">
+                  <option class="option" value="1">1</option>
+                  <option class="option" value="1">2</option>
+                  <option class="option" value="1">3</option>
+                  <option class="option" value="1">4</option>
+                  <option class="option" value="1">5</option>
+                  <option class="option" value="more">6 or more</option>
+                </select>
+              </form>
+              <button class="ticket">PROCEED</button>
+            </div>
+          </div>
+
+          <div class="dropdown-wrapper">
+            <i class="fa fa-user-circle icon"></i>
+            <div class="profile-dropdown">
+              <p class="profile-header">your account</p>
+              <form class="dropdown-form" id="profile-form">
+                <label for="email" class="label">E-mail</label>
+                <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
+                <div class="error-message" id="profile-email-error">
+                  Please enter a valid e-mail address
+                </div>
+
+                <label for="choose" class="label_2">Password</label>
+                <input type="password" name="choose" placeholder="Password" class="box password"
+                  id="dropdown-password" />
+                <div class="error-message" id="profile-password-error">
+                  Must be at least 5 characters
+                </div>
+                <div id="success-message">
+                  Welcome back, you are now logged in
+                </div>
+                <button type="submit" id="profile-submit-button" class="profile">
+                  SIGN IN
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <nav aria-label="menu" class="menu">
+        <ul class="mobile-menu">
+          <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
+            <span id="menu" class="menu-link">Menu</span>
+          </label>
+          <input type="checkbox" id="hamburger-menu" />
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="explore.html">Explore</a></li>
+          <li><a href="get_involved.html">Get involved</a></li>
+          <li><a href="visit.html">Visit</a></li>
+          <li><a href="about_us.html">About us</a></li>
+        </ul>
+        <ul class="large-screen-menu">
+          <li>
+            <a href="exhibitions.html" class="menu-link">Exhibitions</a>
+          </li>
+          <li>
+            <a href="explore.html" class="menu-link">Explore</a>
+          </li>
+          <li>
+            <a href="get_involved.html" class="menu-link">Get involved</a>
+          </li>
+          <li>
+            <a href="visit.html" class="menu-link">Visit</a>
+          </li>
+          <li>
+            <a href="about_us.html" class="menu-link">About us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="main-wrapper">
+        <div class="content-container">
+          <h1 class="main-heading">More to explore</h1>
+          <section class="section-container">
+            <div class="blue info-box" id="item-1">
+              <h2 class="info-box-heading">For Kids</h2>
+              <p>
+                Are you a young person looking to learn more about science? Come
+                on down to our museum, there’s plenty to see and do.
+              </p>
+              <p>
+                You can learn about Newtonian physics from our bumper swing, or
+                why not travel back in time and meet our resident Woolly Mammoth?
+              </p>
+              <p>
+                Our exhibits are designed to be accessible for interested minds,
+                so make sure you come ready to learn and explore.
+              </p>
+              <p>You can also join one of our popular science clubs.</p>
+            </div>
+            <div class="info-box" id="item-2">
+              <div id="club-anchor"></div>
+              <h4 class="info-box-heading">Join a Children's Club</h4>
+              <h5>Young Stars Club</h5>
+              <p>
+                We also have the <em>Young Stars Club</em> which meets once a week
+                on a Saturday between 10:00 and 13:00 where you’ll get to explore
+                and experiment with our team of experts.
+              </p>
+              <h5>The Holiday Club</h5>
+              <p>
+                During the school holidays we run <em>The Holiday Club</em> where
+                you can join other children your age to go on a journey of
+                discovery. Each holiday we pick a new theme to explore.
+              </p>
+              <p>
+                To find out more about The Young Stars Club or The Holiday Club
+                and how you can join, send us a message.
+              </p>
+            </div>
+            <div class="image-box" id="item-3">
+              <!-- <img src="images\kids-cartoon.jpg" alt="" /> -->
+            </div>
           </section>
+          <div class="get-in-touch" id="get-in-touch-1">
+            <p>Do you want to join one of our clubs?</p>
+            <a href="contact.html" class="button">Get in touch
+            </a>
+          </div>
+          <section class="section-container">
+            <div class="info-box" id="item-4">
+              <h3 class="info-box-heading">For Teachers</h3>
+              <p>
+                As a community-driven museum, we want to work with schools to
+                create places of learning and exploring. .
+              </p>
+              <p>
+                Our team are on hand to give your students guided tours of the
+                museum, teach them in our learning laboratory, and provide great
+                video presentations that will excite and inspire them
+              </p>
+              <p>
+                Please get in touch with us here to find out more about our
+                facilities and to arrange a time to bring your students through
+                for a visit.
+              </p>
+            </div>
+            <div class="info-box" id="item-5">
+              <h3 class="info-box-heading">For Researchers</h3>
+              <p>
+                Are you looking to get involved with our team of researchers and
+                academics?
+              </p>
+              <p>
+                Our museum offers various ways for you to use our resources and
+                contribute towards them. We have online records, laboratory space,
+                and a working relationship with a number of universities around
+                the country.
+              </p>
+            </div>
+            <div class="image-box" id="item-6">
+              <!-- <img src="images\researcher-cartoon_large.jpg" alt="" /> -->
+            </div>
+          </section>
+          <div class="get-in-touch" id="get-in-touch-2">
+            <p>Are you a teacher or a researcher?</p>
+            <a href="contact.html" class="button">Get in touch</a>
+          </div>
+        </div>
+        <div class="newsletter-wrapper">
+          <div class="blur">
+            <section class="newsletter-section">
+              <p for="newsletter">
+                Sign up to our <em>newsletter</em> and be the first to know about our
+                exciting <em>new stuff</em>:
+              </p>
+              <div class="newsletter-success">
+                Welcome! Please check your inbox
+              </div>
+              <form class="newsletter-form">
+                <label for="newsletter-input">E-mail</label>
+                <div class="input-wrapper">
+                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
+                </div>
+              </form>
+              <p id="newsletter-error" class="error-message">
+                Please enter a valid e-mail address
+              </p>
+            </section>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="fading-background_1"></div>
-    <div class="fading-background_2"></div>
-  </main>
-
+      <div class="fading-background_1"></div>
+      <div class="fading-background_2"></div>
+    </main>
+  </div>
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
