--- a/get_involved.html
+++ b/get_involved.html
@@ -33,185 +33,195 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-wrapper">
-      <figure class="logo">
-        <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
-      </figure>
-      <nav aria-label="icons" class="icons">
-        <div class="dropdown-wrapper">
-          <i class="fa fa-search icon"></i>
-          <div class="search-dropdown">
-            <p class="search-header">search results</p>
-            <form action="" class="dropdown-form">
-              <label for="search" class="label">Search</label>
-              <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
-            </form>
-            <p class="dropdown-text">
-              Sorry, no result for your search, please try something else
-            </p>
-          </div>
-        </div>
-
-        <div class="dropdown-wrapper">
-          <i class="fa fa-ticket-alt icon"></i>
-          <div class="ticket-dropdown">
-            <p class="ticket-header">buy ticket</p>
-            <p class="dropdown-text">
-              Please Choose the Desired Number of Tickets and Click Proceed in
-              order to finalize your purchase on www.ticketmaster.com
-            </p>
-            <p class="dropdown-text">
-              If your party consist of 6 people or more, you will be taken to
-              our contact form.
-            </p>
-            <form action="" class="ticket dropdown-form">
-              <label for="select" class="ticket-label">Tickets</label>
-              <select name="tickets" id="select">
-                <option class="option" value="1">1</option>
-                <option class="option" value="1">2</option>
-                <option class="option" value="1">3</option>
-                <option class="option" value="1">4</option>
-                <option class="option" value="1">5</option>
-                <option class="option" value="more">6 or more</option>
-              </select>
-            </form>
-            <button class="ticket">PROCEED</button>
-          </div>
-        </div>
-
-        <div class="dropdown-wrapper">
-          <i class="fa fa-user-circle icon"></i>
-          <div class="profile-dropdown">
-            <p class="profile-header">your account</p>
-            <form class="dropdown-form" id="profile-form">
-              <label for="email" class="label">E-mail</label>
-              <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
-              <div class="error-message" id="profile-email-error">
-                Please enter a valid e-mail address
-              </div>
-
-              <label for="choose" class="label_2">Password</label>
-              <input type="password" name="choose" placeholder="Password" class="box password" id="dropdown-password" />
-              <div class="error-message" id="profile-password-error">
-                Must be at least 5 characters
-              </div>
-              <div id="success-message">
-                Welcome back, you are now logged in
-              </div>
-              <button type="submit" id="profile-submit-button" class="profile">
-                SIGN IN
-              </button>
-            </form>
-          </div>
-        </div>
-      </nav>
-    </div>
-    <nav aria-label="menu" class="menu">
-      <ul class="mobile-menu">
-        <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
-        </label>
-        <input type="checkbox" id="hamburger-menu" />
-        <li><a href="exhibitions.html">Exhibitions</a></li>
-        <li><a href="explore.html">Explore</a></li>
-        <li><a href="get_involved.html">Get involved</a></li>
-        <li id="visit"><a href="visit.html">Visit</a></li>
-      </ul>
-      <ul class="large-screen-menu">
-        <li>
-          <a href="exhibitions.html" class="menu-link">Exhibitions</a>
-        </li>
-        <li>
-          <a href="explore.html" class="menu-link">Explore</a>
-        </li>
-        <li>
-          <a href="get_involved.html" class="menu-link">Get involved</a>
-        </li>
-        <li>
-          <a href="visit.html" class="menu-link">Visit</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <div class="main-wrapper">
-      <div class="content-container">
-        <h1 class="main-heading">You can support our museum in various ways</h1>
-        <section class="section-container">
-          <div class="info-box" id="item-1">
-            <h2 class="info-box-heading">Donations</h2>
-            <p>
-              There are various ways you can support the museum. Donations are
-              very welcome and are an important way we keep this museum open and
-              accessible to the whole community.
-            </p>
-            <p>
-              You can also support us by donating items of interest to the
-              museum’s collections. If you have some item or collection that you
-              think others would enjoy, please let us know by contacting our
-              Collections Department and they will be able to assist you.
-            </p>
-          </div>
-          <div class="info-box" id="item-2">
-            <h2 class="info-box-heading">Volunteer</h2>
-            <p>
-              A number of people volunteer their time and effort to keep the
-              displays in good order and ready for visitors to come and enjoy.
-              Volunteering has its perks including getting to see behind the
-              scenes of a working museum, access to staff-only lectures, and a
-              monthly lunch where all staff and volunteers come together to
-              discuss ideas for future exhibits and strategies for the museum.
-            </p>
-            <p>
-              You can help volunteer in a number of different spheres. Please
-              contact us if you’d like to find out more about how you can get
-              involved.
-            </p>
-          </div>
-          <div class="info-box" id="item-3">
-            <h2 class="info-box-heading">Internships</h2>
-            <p>
-              Are you interested in working in a museum? Do you enjoy the fun
-              and excitement of sharing the wonders of nature with people?
-            </p>
-            <p>
-              Well you could be just the right person to enjoy an internship at
-              the museum.
-            </p>
-          </div>
-        </section>
-        <div class="get-in-touch" id="get-in-touch-1">
-          <p>Do you want to help us out?</p>
-          <a href="contact.html" class="button">Get in touch
-          </a>
-        </div>
-      </div>
-      <div class="newsletter-wrapper">
-        <div class="blur">
-          <section class="newsletter">
-            <label for="newsletter">
-              Sign up to our <em>newsletter</em> and be the first to know about our
-              exciting <em>new stuff</em>:
-            </label>
-            <div class="newsletter-success">
-              Welcome! Please check your inbox
+  <div class="flex-wrapper">
+    <header>
+      <div class="header-wrapper">
+        <figure class="logo">
+          <a href="index.html"><img src="images\cms-logo.png" alt="Community Science Museum logo" /></a>
+        </figure>
+        <nav aria-label="icons" class="icons">
+          <div class="dropdown-wrapper">
+            <i class="fa fa-search icon"></i>
+            <div class="search-dropdown">
+              <p class="search-header">search results</p>
+              <form action="" class="dropdown-form">
+                <label for="search" class="label">Search</label>
+                <input type="text" name="first-name" placeholder="Start Writing..." id="search" class="box" />
+              </form>
+              <p class="dropdown-text">
+                Sorry, no result for your search, please try something else
+              </p>
             </div>
-            <form class="newsletter">
-              <input id="newsletter" type="text" name="email" placeholder="your e-mail" />
-              <input id="sign-up" type="submit" name="subscribe" value="SIGN UP" />
-            </form>
-            <p id="newsletter-error" class="error-message">
-              Please enter a valid e-mail address
-            </p>
+          </div>
+
+          <div class="dropdown-wrapper">
+            <i class="fa fa-ticket-alt icon"></i>
+            <div class="ticket-dropdown">
+              <p class="ticket-header">buy ticket</p>
+              <p class="dropdown-text">
+                Please Choose the Desired Number of Tickets and Click Proceed in
+                order to finalize your purchase on www.ticketmaster.com
+              </p>
+              <p class="dropdown-text">
+                If your party consist of 6 people or more, you will be taken to
+                our contact form.
+              </p>
+              <form action="" class="ticket dropdown-form">
+                <label for="select" class="ticket-label">Tickets</label>
+                <select name="tickets" id="select">
+                  <option class="option" value="1">1</option>
+                  <option class="option" value="1">2</option>
+                  <option class="option" value="1">3</option>
+                  <option class="option" value="1">4</option>
+                  <option class="option" value="1">5</option>
+                  <option class="option" value="more">6 or more</option>
+                </select>
+              </form>
+              <button class="ticket">PROCEED</button>
+            </div>
+          </div>
+
+          <div class="dropdown-wrapper">
+            <i class="fa fa-user-circle icon"></i>
+            <div class="profile-dropdown">
+              <p class="profile-header">your account</p>
+              <form class="dropdown-form" id="profile-form">
+                <label for="email" class="label">E-mail</label>
+                <input type="text" name="email" placeholder="your@email.com" id="dropdown-email" class="box" />
+                <div class="error-message" id="profile-email-error">
+                  Please enter a valid e-mail address
+                </div>
+
+                <label for="choose" class="label_2">Password</label>
+                <input type="password" name="choose" placeholder="Password" class="box password"
+                  id="dropdown-password" />
+                <div class="error-message" id="profile-password-error">
+                  Must be at least 5 characters
+                </div>
+                <div id="success-message">
+                  Welcome back, you are now logged in
+                </div>
+                <button type="submit" id="profile-submit-button" class="profile">
+                  SIGN IN
+                </button>
+              </form>
+            </div>
+          </div>
+        </nav>
+      </div>
+      <nav aria-label="menu" class="menu">
+        <ul class="mobile-menu">
+          <label class="hamburger-label" for="hamburger-menu"><span class="fa fa-bars"></span>
+            <span id="menu" class="menu-link">Menu</span>
+          </label>
+          <input type="checkbox" id="hamburger-menu" />
+          <li><a href="exhibitions.html">Exhibitions</a></li>
+          <li><a href="explore.html">Explore</a></li>
+          <li><a href="get_involved.html">Get involved</a></li>
+          <li><a href="visit.html">Visit</a></li>
+          <li><a href="about_us.html">About us</a></li>
+        </ul>
+        <ul class="large-screen-menu">
+          <li>
+            <a href="exhibitions.html" class="menu-link">Exhibitions</a>
+          </li>
+          <li>
+            <a href="explore.html" class="menu-link">Explore</a>
+          </li>
+          <li>
+            <a href="get_involved.html" class="menu-link">Get involved</a>
+          </li>
+          <li>
+            <a href="visit.html" class="menu-link">Visit</a>
+          </li>
+          <li>
+            <a href="about_us.html" class="menu-link">About us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <main>
+      <div class="main-wrapper">
+        <div class="content-container">
+          <h1 class="main-heading">You can support our museum in various ways</h1>
+          <section class="section-container">
+            <div class="info-box" id="item-1">
+              <h2 class="info-box-heading">Donations</h2>
+              <p>
+                There are various ways you can support the museum. Donations are
+                very welcome and are an important way we keep this museum open and
+                accessible to the whole community.
+              </p>
+              <p>
+                You can also support us by donating items of interest to the
+                museum’s collections. If you have some item or collection that you
+                think others would enjoy, please let us know by contacting our
+                Collections Department and they will be able to assist you.
+              </p>
+            </div>
+            <div class="info-box" id="item-2">
+              <h2 class="info-box-heading">Volunteer</h2>
+              <p>
+                A number of people volunteer their time and effort to keep the
+                displays in good order and ready for visitors to come and enjoy.
+                Volunteering has its perks including getting to see behind the
+                scenes of a working museum, access to staff-only lectures, and a
+                monthly lunch where all staff and volunteers come together to
+                discuss ideas for future exhibits and strategies for the museum.
+              </p>
+              <p>
+                You can help volunteer in a number of different spheres. Please
+                contact us if you’d like to find out more about how you can get
+                involved.
+              </p>
+            </div>
+            <div class="info-box" id="item-3">
+              <h2 class="info-box-heading">Internships</h2>
+              <p>
+                Are you interested in working in a museum? Do you enjoy the fun
+                and excitement of sharing the wonders of nature with people?
+              </p>
+              <p>
+                Well you could be just the right person to enjoy an internship at
+                the museum.
+              </p>
+            </div>
           </section>
+          <div class="get-in-touch" id="get-in-touch-1">
+            <p>Do you want to help us out?</p>
+            <a href="contact.html" class="button">Get in touch
+            </a>
+          </div>
+        </div>
+        <div class="newsletter-wrapper">
+          <div class="blur">
+            <section class="newsletter-section">
+              <p for="newsletter">
+                Sign up to our <em>newsletter</em> and be the first to know about our
+                exciting <em>new stuff</em>:
+              </p>
+              <div class="newsletter-success">
+                Welcome! Please check your inbox
+              </div>
+              <form class="newsletter-form">
+                <label for="newsletter-input">E-mail</label>
+                <div class="input-wrapper">
+                  <input id="newsletter-input" type="text" name="email" placeholder="youremail@domain.com" />
+                  <button id="sign-up-button" type="submit" name="subscribe" value="SIGN UP">Sign up</button>
+                </div>
+              </form>
+              <p id="newsletter-error" class="error-message">
+                Please enter a valid e-mail address
+              </p>
+            </section>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="fading-background_1"></div>
-    <div class="fading-background_2"></div>
-  </main>
-
+      <div class="fading-background_1"></div>
+      <div class="fading-background_2"></div>
+    </main>
+  </div>
   <footer>
     <div class="footer-wrapper">
       <div class="footer-container fi1">
